Исправлена документация
