# backend/swagger/swagger.yml
@@ -1,14 +1,8 @@
 swagger: "2.0"
 info:
-  title: beego Test API
-  description: beego has a very cool tools to autogenerate documents for your API
+  title: Случайны лес API
+  description: API подготовленное командой Случайный лес
   version: 1.0.0
-  termsOfService: http://beego.me/
-  contact:
-    email: astaxie@gmail.com
-  license:
-    name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
 basePath: /v1
 paths:
   /client/:
@@ -272,13 +266,13 @@ definitions:
 tags:
 - name: event
   description: |
-    EventDataController operations for Event-Data
+    EventDataController API Для работы с событиями
 - name: client
   description: |2
-     ClientController operations for Client
+     API для работы с клиентом
 - name: company
-  description: |2
-     CompaniController operations for Compani
+  description: |
+    CompaniController API Для работы с компаниями
 - name: user
-  description: |2
-     UserController operations for User
+  description: |
+    UserController API Для работы с авторизации
